--- a/src/GettingStartedApplication/WebService/Views/Home/Index.cshtml
+++ b/src/GettingStartedApplication/WebService/Views/Home/Index.cshtml
@@ -6,17 +6,56 @@
     <!-- Heading row -->
     <div class="row">
         <div class="col-md-12">
-            <h1>Service Fabric Application</h1>
-            <p class="">This application is aimed at helping you get a good introduction to developing Service Fabric applications.</p>
-            <p>The application consists of four services and shows how the different service types works and can communicate.</p>
+            <h1>Service Fabric Sample Application</h1>
+            <p>This application is a sample to help you get a good introduction to Service Fabric applications. <br /> The application consists of multiple services to show how the different types of Service Fabric services works, as well as how they can communicate.</p>
         </div>
-    </div>
-    <!-- Service column -->
-    <div class="col-md-12">
-        <h3>Docs docs docs...</h3>
-        <p>
-            Good description of what this is and how to use it.
-            References to docs and other samples...
-        </p>
+        <!-- Service column -->
+        <div class="col-md-12">
+            <p>
+                There are five services in the application. Each of the services have a UI exposed in this web application, which is being hosted by the WebService. The web application is built using HTML and JavaScript and communicate via the HTTP API exposed by the WebService. <br />
+                We have added some basic UI elements and implemented calls to some of the exposed HTTP APIs. Feel free to add on to the application.
+
+                <div class="list-group">
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <h4>WebService</h4></a>
+                        </li>
+                        <li class="list-group-item">A reliable stateless service built using ASP.NET Core. The service functions as a gateway exposing an HTTP RESTFul endpoint with an API to communicate with the backend services. The service also serves the Web UI.</li>
+                    </ul>
+                </div>
+                <div class="list-group">
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <a href="/Home/Stateless"><h4>StatelessBackendService</h4></a>
+                        </li>
+                        <li class="list-group-item">A reliable stateless service built using .NET Framework. The service exposes a Service Remoting endpoint and a single method though an interface.</li>
+                    </ul>
+                </div>
+                <div class="list-group">
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <a href="/Home/Stateful"><h4>StatefulBackendService</h4></a>
+                        </li>
+                        <li class="list-group-item">A reliable stateful service built using ASP.NET Core. The service exposes an HTTP RESTFul endpoint with an API. The services store key value pairs in partitions based on the first letter of the key.</li>
+                    </ul>
+                </div>
+                <div class="list-group">
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <a href="/Home/Actor"><h4>ActorBackendService</h4></a>
+                        </li>
+                        <li class="list-group-item">A reliable actor service built using .NET Framework. The service create actor instances and exposes a Service Remoting endpoint and two methods to invoke an actor instance and to get the number of active actors.</li>
+                    </ul>
+                </div>
+                <div class="list-group">
+                    <ul class="list-group">
+                        <li class="list-group-item">
+                            <a href="/Home/Guest"><h4>GuestExecutableService</h4></a>
+                        </li>
+                        <li class="list-group-item">A guest executable service. The service is an executable program that hosts a webserver responding to HTTP GET commands.</li>
+                    </ul>
+                </div>
+            </p>
+        </div>
     </div>
 </div>
