--- a/src/GettingStartedApplication/WebService/Views/Home/Index.cshtml
+++ b/src/GettingStartedApplication/WebService/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "SF OneApp - Index";
+    ViewData["Title"] = "Getting started with Service Fabric";
 }
 <!-- Content Row -->
 <div class="row">
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-md-12">
             <h1>Service Fabric Sample Application</h1>
-            <p>This application is a sample to help you get a good introduction to Service Fabric applications. <br /> The application consists of multiple services to show how the different types of Service Fabric services works, as well as how they can communicate.</p>
+            <p>This application is a sample to help get started with Service Fabric. <br /> The application consists of multiple services to show how the different types of Service Fabric services works, as well as how they can communicate.</p>
         </div>
         <!-- Service column -->
         <div class="col-md-12">
@@ -18,9 +18,9 @@
                 <div class="list-group">
                     <ul class="list-group">
                         <li class="list-group-item">
-                            <h4>WebService</h4></a>
+                            <h4>WebService</h4>
                         </li>
-                        <li class="list-group-item">A reliable stateless service built using ASP.NET Core. The service functions as a gateway exposing an HTTP RESTFul endpoint with an API to communicate with the backend services. The service also serves the Web UI.</li>
+                        <li class="list-group-item">A stateless Reliable Service built using ASP.NET Core. The service functions as the entry point to the application exposing an HTTP endpoint with an API to communicate with the backend services and a single-page Web UI.</li>
                     </ul>
                 </div>
                 <div class="list-group">
@@ -28,7 +28,7 @@
                         <li class="list-group-item">
                             <a href="/Home/Stateless"><h4>StatelessBackendService</h4></a>
                         </li>
-                        <li class="list-group-item">A reliable stateless service built using .NET Framework. The service exposes a Service Remoting endpoint and a single method though an interface.</li>
+                        <li class="list-group-item">A stateless Reliable Service that does a long running job processing task. The service exposes an RPC endpoint using Service Remoting with a single method though a shared remoting interface.</li>
                     </ul>
                 </div>
                 <div class="list-group">
@@ -36,7 +36,7 @@
                         <li class="list-group-item">
                             <a href="/Home/Stateful"><h4>StatefulBackendService</h4></a>
                         </li>
-                        <li class="list-group-item">A reliable stateful service built using ASP.NET Core. The service exposes an HTTP RESTFul endpoint with an API. The services store key value pairs in partitions based on the first letter of the key.</li>
+                        <li class="list-group-item">A stateful Reliable Service built using ASP.NET Core and Reliable Collections. The service exposes an HTTP endpoint with an API hosted with Kestrel. The services store key-value pairs in a Reliable Dictionary and can be partitioned based on the first letter of the key.</li>
                     </ul>
                 </div>
                 <div class="list-group">
@@ -44,7 +44,7 @@
                         <li class="list-group-item">
                             <a href="/Home/Actor"><h4>ActorBackendService</h4></a>
                         </li>
-                        <li class="list-group-item">A reliable actor service built using .NET Framework. The service create actor instances and exposes a Service Remoting endpoint and two methods to invoke an actor instance and to get the number of active actors.</li>
+                        <li class="list-group-item">A stateful Reliable Actors service. The service creates actor instances and exposes a Service Remoting endpoint and two methods to invoke an actor instance and to get the number of active actors.</li>
                     </ul>
                 </div>
                 <div class="list-group">
