Adding a guest EXE service, fixing links, updating text and config settings.

--- a/src/GettingStartedApplication/WebService/Views/Home/Actor.cshtml
+++ b/src/GettingStartedApplication/WebService/Views/Home/Actor.cshtml
@@ -7,13 +7,14 @@
     <div class="row">
         <div class="col-md-12">
             <h1>Actor Backend Service</h1>
-            <p>A reliable actor service built using .NET Framework. The service create actor instances and exposes a Service Remoting endpoint and two methods to invoke an actor instance and to get the number of active actors.</p>
-            <p>
-                Click here to learn more about reliable actors:
-                <a href="https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-reliable-actors-introduction">
-                    https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-reliable-actors-introduction
-                </a>
-            </p>
+            <p>A Reliable Actors service. The service creates actor instances and exposes a Service Remoting endpoint and two methods to invoke an actor instance and to get the number of active actors.</p>
+            <ul>
+                <li>
+                    <a href="https://docs.microsoft.com/azure/service-fabric/service-fabric-reliable-actors-introduction">
+                        Learn more about Reliable Actors
+                    </a>
+                </li>
+            </ul>
         </div>
         <!-- Service column -->
         <div class="col-md-12">
