--- a/src/GettingStartedApplication/WebService/Views/Home/Stateless.cshtml
+++ b/src/GettingStartedApplication/WebService/Views/Home/Stateless.cshtml
@@ -7,13 +7,19 @@
     <div class="row">
         <div class="col-md-12">
             <h1>Stateless Backend Service</h1>
-            <p>A reliable stateless service built using .NET Framework. The service exposes a Service Remoting endpoint and a single method though an interface.</p>
-            <p>
-                Click here to learn more about reliable steless services:
-                <a href="https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-reliable-services-introduction">
-                    https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-reliable-services-introduction
-                </a>
-            </p>
+            <p>A stateless Reliable Service that does a long running job processing task. The service exposes an RPC endpoint using Service Remoting with a single method though a shared remoting interface.</p>
+            <ul>
+                <li>
+                    <a href="https://docs.microsoft.com/azure/service-fabric/service-fabric-reliable-services-introduction" target="_blank">
+                        Learn more about stateless Reliable Services
+                    </a>
+                </li>
+                <li>
+                    <a href="https://docs.microsoft.com/azure/service-fabric/service-fabric-reliable-services-communication-remoting" target="_blank">
+                        Learn more about Service Remoting
+                    </a>
+                </li>
+            </ul>
         </div>
     </div>
     <!-- Service column -->
