--- a/src/GettingStartedApplication/WebService/Views/Shared/_Layout.cshtml
+++ b/src/GettingStartedApplication/WebService/Views/Shared/_Layout.cshtml
@@ -44,6 +44,9 @@
                     <li id="navHome">
                         <a href="/">Home</a>
                     </li>
+                    <li id="navGuestExe">
+                        <a href="/Home/GuestExe">Guest EXE</a>
+                    </li>
                     <li id="navStateless">
                         <a href="/Home/Stateless">Stateless</a>
                     </li>
