--- a/src/GettingStartedApplication/WebService/Views/Shared/_Layout.cshtml
+++ b/src/GettingStartedApplication/WebService/Views/Shared/_Layout.cshtml
@@ -56,6 +56,9 @@
                     <li id="navActor">
                         <a href="/Home/Actor">Actor</a>
                     </li>
+                    <li id="navTenant">
+                        <a href="/Home/Tenant">Tenant</a>
+                    </li>
                 </ul>
             </div>
         </div>
