TenantService auto creation done

--- a/src/GettingStartedApplication/WebService/Views/Home/Tenant.cshtml
+++ b/src/GettingStartedApplication/WebService/Views/Home/Tenant.cshtml
@@ -25,6 +25,7 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <button class="btn btn-primary btn-block" onclick="deployTenant()" type="button" id="deployTenant" tabindex="1">Deploy Tenant</button>
+                                    <button class="btn btn-primary btn-block" onclick="teardownTenant()" type="button" id="teardownTenant" tabindex="1">Teardown Tenant</button>
                                 </div>
                             </div>
                         </div>
