--- a/src/GettingStartedApplication/WebService/Views/Home/Index.cshtml
+++ b/src/GettingStartedApplication/WebService/Views/Home/Index.cshtml
@@ -47,14 +47,22 @@
                         <li class="list-group-item">A Reliable Actors service. The service creates actor instances and exposes a Service Remoting endpoint and two methods to invoke an actor instance and to get the number of active actors.</li>
                     </ul>
                 </div>
-                <div class="list-group">
-                    <ul class="list-group">
-                        <li class="list-group-item">
-                            <a href="/Home/GuestExe"><h4>GuestExecutableService</h4></a>
-                        </li>
-                        <li class="list-group-item">A guest executable service. The service is an executable program that hosts a webserver responding to HTTP GET commands.</li>
-                    </ul>
-                </div>
+            <div class="list-group">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <a href="/Home/GuestExe"><h4>GuestExecutableService</h4></a>
+                    </li>
+                    <li class="list-group-item">A guest executable service. The service is an executable program that hosts a webserver responding to HTTP GET commands.</li>
+                </ul>
+            </div>
+            <div class="list-group">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <a href="/Home/Tenant"><h4>TenantBackendService</h4></a>
+                    </li>
+                    <li class="list-group-item">A stateful service which creates tenant workers.</li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
