--- a/src/GettingStartedApplication/WebService/Views/Home/Index.cshtml
+++ b/src/GettingStartedApplication/WebService/Views/Home/Index.cshtml
@@ -6,8 +6,8 @@
     <!-- Heading row -->
     <div class="row">
         <div class="col-md-12">
-            <h1>Service Fabric Sample Application</h1>
-            <p>This application is a sample to help get started with Service Fabric. <br /> The application consists of multiple services to show how the different types of Service Fabric services works, as well as how they can communicate.</p>
+            <h1>Service Fabric Sample Windows Application</h1>
+            <p>This application is a Windows sample to help you get started with Service Fabric. All services target .NET8.<br /> The application consists of multiple services to show how the different types of Service Fabric services work, as well as how they can communicate.</p>
         </div>
         <!-- Service column -->
         <div class="col-md-12">
@@ -20,7 +20,7 @@
                         <li class="list-group-item">
                             <h4>WebService</h4>
                         </li>
-                        <li class="list-group-item">A stateless Reliable Service built using ASP.NET Core. The service functions as the entry point to the application exposing an HTTP endpoint with an API to communicate with the backend services and a single-page Web UI.</li>
+                        <li class="list-group-item">A stateless Reliable Web Service built using .NET8. The service functions as the entry point to the application exposing an HTTP endpoint with an API to communicate with the backend services and a single-page Web UI.</li>
                     </ul>
                 </div>
                 <div class="list-group">
@@ -52,7 +52,7 @@
                         <li class="list-group-item">
                             <a href="/Home/GuestExe"><h4>GuestExecutableService</h4></a>
                         </li>
-                        <li class="list-group-item">A guest executable service. The service is an executable program that hosts a webserver responding to HTTP GET commands.</li>
+                        <li class="list-group-item">A Windows guest executable service. The service is an executable program that hosts a webserver responding to HTTP GET commands.</li>
                     </ul>
                 </div>
         </div>
